gitea/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  serviceName: gitea
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.17
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: gitea-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: gitea-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1G
