gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  selector:
    app.kubernetes.io/name: gitea
  ports:
    - name: http
      port: 80
      targetPort: http
