gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
spec:
  rules:
    - host: gitea.gitea.svc.cluster.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gitea
                port:
                  name: http
